--- a/views/admin.html
+++ b/views/admin.html
@@ -37,7 +37,7 @@
             <p class="section__subheader">PANEL DE ADMINISTRACIÓN</p>
         </div>
         <div class="room__grid">
-            <a class="adminSection" href="/views/admin/register.html">
+            <a class="adminSection" href="/views/admin/register.php">
                 <div class="room__card">
                     <div class="room__card__image">
                         <img src="/assets/images/admin_registerUser.png" alt="Adopta tu mascota" />
@@ -58,8 +58,8 @@
                     </div>
                     <div class="room__card__details">
                         <h4>Administrar Usuarios</h4>
-                        <p style="text-align: justify;">¿Necesitas <span class="impact">corregir los datos de algún</span>
-                            trabajador o necesitas <span class="impact">generar una nueva contraseña</span>? En esta sección
+                        <p style="text-align: justify;">¿Necesitas <span class="impact">corregir los datos de algún trabajador</span>
+                            o necesitas <span class="impact">generar una nueva contraseña</span>? En esta sección
                             podras modificar los datos personales de los trabajadores registrados.</p>
                     </div>
                 </div>
