--- a/test/test.css
+++ b/test/test.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+@import url('/css/animations.css');
 *{
     margin: 0;
     padding: 0;
@@ -18,7 +19,7 @@ section{
 .form-box{
     position: relative;
     width: 400px;
-    height: 450px;
+    height: 650px;
     background: transparent;
     border: 2px solid rgba(255,255,255,0.5);
     border-radius: 20px;
@@ -113,4 +114,19 @@ button{
 }
 .register p a:hover{
     text-decoration: underline;
+}
+
+.returnError {
+    padding-top: 20px;
+    text-align: center;
+    font-weight: bold;
+    animation: bounce 2s;
+    color: red;
+}
+
+.returnSuccesful {
+    padding-top: 20px;
+    text-align: center;
+    font-weight: bold;
+    color: green;
 }
