--- a/css/styles.css
+++ b/css/styles.css
@@ -128,7 +128,8 @@ nav {
   align-items: center;
   justify-content: space-between;
   gap: 2rem;
-  background-color: var(--primary-color);
+  /*background-color: var(--primary-color);*/
+  background-color: #1a5c50;
 }
 
 .nav__menu__btn {
@@ -146,7 +147,7 @@ nav {
   align-items: center;
   flex-direction: column;
   gap: 2rem;
-  background-color: rgba(188, 28, 92, 0.9);
+  background-color: rgba(26, 128, 92, 0.9);
   transform: translateY(-100%);
   transition: 0.5s;
   z-index: -1;
