--- a/test/test.css
+++ b/test/test.css
@@ -129,4 +129,20 @@ button{
     text-align: center;
     font-weight: bold;
     color: green;
+    font-size: 0.5em;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+    font-size: 0.8em;
+}
+th, td {
+    border: 1px solid black;
+    padding: 8px;
+    text-align: left;
+}
+th {
+    text-align: center;
+    background-color: #f2f2f2;
 }
