--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,28 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 @import url("animations.css");
 
+/*
+Otros:
+Rojo claro: #871b35
+Rojo obscuro: #771631
+Rojo intenso: #ba1934
+Falso blanco: #f0e5d4
+Dorado: #d7a255
+
+
+Morena:
+Guinda: #9d2348
+Verde: #1a5c50
+Dorado: #d3bf9a
+Gris: #8b8f91
+
+Prieta:
+Guinda: #611230
+Verde: #002e2b
+Dorado: #b48e5d
+Gris: #666c6c
+*/
+
 :root {
   --primary-color: #9d2348;
   --primary-color-dark: #611230;
