--- a/views/error/404.html
+++ b/views/error/404.html
@@ -36,7 +36,7 @@
     <div class="about__content">
       <p class="section__description" style="font-size: 1.3em; text-align: center;">
         ¡Lo siento, parece que te has perdido en la red! La página que buscas no ha sido encontrada. No te preocupes, incluso los mejores navegantes se desvían de vez en cuando. 
-        <a href="/index.php" style="font-weight: 1.4em; font-weight: bold; color: #ba1934;">¿Por qué no intentas regresar al puerto seguro de nuestra página de inicio? </a>
+        <a href="/index.php" style="font-weight: 1.4em; font-weight: bold; color: #ba1934;">¿Por qué no intentas regresar al inicio de nuestra página de inicio? </a>
       </p>
     </div>
   </section>
