--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,6 @@ Rojo intenso: #ba1934
 Falso blanco: #f0e5d4
 Dorado: #d7a255
 
-
 Morena:
 Guinda: #9d2348
 Verde: #1a5c50
@@ -37,6 +36,22 @@ Gris: #666c6c
   margin: 0;
   box-sizing: border-box;
 }
+
+.swal2-popup {
+  font-family: 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.swal2-popup .swal2-actions .swal2-confirm,
+.swal2-popup .swal2-actions .swal2-cancel {
+  font-family: 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: bold;
+}
+
+.swal2-popup .swal2-actions .swal2-confirm:hover,
+.swal2-popup .swal2-actions .swal2-cancel:hover {
+  animation: scale 1s;
+}
+
 
 .section__container {
   max-width: var(--max-width);
@@ -89,7 +104,7 @@ Gris: #666c6c
   border-radius: 5px;
   cursor: pointer;
   transition: 0.3s;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .btn:hover {
