--- a/css/petAdd.css
+++ b/css/petAdd.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+@import url("animations.css");
+
 section.login {
   display: flex;
   justify-content: center;
@@ -56,7 +59,7 @@ input:valid ~ label {
   font-size: 1.1em;
   padding: 0 35px 0 5px;
   color: #8b8f91;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 .inputbox ion-icon {
   position: absolute;
