--- a/css/petAdd.css
+++ b/css/petAdd.css
@@ -188,7 +188,7 @@ select:valid ~ label {
   font-size: 1.1em;
   padding: 0 35px 0 5px;
   color: #8b8f91;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 /* Estilo para el input de tipo file */
@@ -202,7 +202,7 @@ input[type="file"] {
 /* Estilo para el texto "Seleccionar archivo" */
 input[type="file"]::file-selector-button {
   visibility: show;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-style: italic;
 }
 
