--- a/css/petView.css
+++ b/css/petView.css
@@ -58,7 +58,7 @@
     outline: none;
     font-size: 1.1em;
     color: #8b8f91;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .searchbox ion-icon{
     position: absolute;
