--- a/css/login.css
+++ b/css/login.css
@@ -2,136 +2,158 @@
 @import url("animations.css");
 @import url(/css/fonts.css);
 
-section.login{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
+section.login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 
-    background-position: center;
-    background-size: cover;
-    padding-top: 50px;
-    padding-bottom: 50px;
+  background-position: center;
+  background-size: cover;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
-.form-box{
-    position: relative;
-    width: 440px;
-    height: 400px;
-    background: transparent;
-    /* border: 4px solid rgba(41, 150, 130, 0.8);
+.form-box {
+  position: relative;
+  width: 440px;
+  height: 400px;
+  background: transparent;
+  /* border: 4px solid rgba(41, 150, 130, 0.8);
     border-radius: 20px; */
-    backdrop-filter: blur(15px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 10%;
+  backdrop-filter: blur(15px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10%;
 }
 
 h2.login {
-    font-size: 2.5em;
-    color: #666c6c;
-    text-align: center;
+  font-size: 2.5em;
+  color: #666c6c;
+  text-align: center;
 }
-.inputbox{
-    position: relative;
-    margin: 30px 0;
-    width: 310px;
-    border-bottom: 2px solid #d3bf9a;
+.inputbox {
+  position: relative;
+  margin: 30px 0;
+  width: 310px;
+  border-bottom: 2px solid #d3bf9a;
 }
-.inputbox label{
-    position: absolute;
-    top: 50%;
-    left: 5px;
-    transform: translateY(-50%);
-    color: #d7a255;
-    font-size: 1em;
-    font-weight: bold;
-    pointer-events: none;
-    transition: .5s;
+.inputbox label {
+  position: absolute;
+  top: 50%;
+  left: 5px;
+  transform: translateY(-50%);
+  color: #d7a255;
+  font-size: 1em;
+  font-weight: bold;
+  pointer-events: none;
+  transition: 0.5s;
 }
 input:focus ~ label,
-input:valid ~ label{
-top: -5px;
+input:valid ~ label {
+  top: -5px;
 }
 .inputbox input {
-    width: 100%;
-    height: 50px;
-    background: transparent;
-    border: none;
-    outline: none;
-    font-size: 1.1em;
-    padding:0 35px 0 5px;
-    color: #8b8f91;
-    font-family: 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  width: 100%;
+  height: 50px;
+  background: transparent;
+  border: none;
+  outline: none;
+  font-size: 1.1em;
+  padding: 0 35px 0 5px;
+  color: #8b8f91;
+  font-family: "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
-.inputbox ion-icon{
-    position: absolute;
-    right: 8px;
-    color: #611230;
-    font-size: 1.2em;
-    top: 20px;
+.inputbox ion-icon {
+  position: absolute;
+  right: 8px;
+  color: #611230;
+  font-size: 1.2em;
+  top: 20px;
 }
-.forget{
-    margin: -15px 0 15px ;
-    font-size: .9em;
-    color: #fff;
-    display: flex;
-    justify-content: space-between;  
+.forget {
+  margin: -15px 0 15px;
+  font-size: 0.9em;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
 }
 
-.forget label input{
-    margin-right: 3px;
-    
+.forget label input {
+  margin-right: 3px;
 }
-.forget label a{
-    color: #fff;
-    text-decoration: none;
+.forget label a {
+  color: #fff;
+  text-decoration: none;
 }
-.forget label a:hover{
-    text-decoration: underline;
+.forget label a:hover {
+  text-decoration: underline;
 }
-button.login{
-    width: 100%;
-    height: 40px;
-    border-radius: 40px;
-    background: #d7a255;
-    color: #fff;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    font-size: 1em;
-    font-weight: 600;
+button.login {
+  width: 100%;
+  height: 40px;
+  border-radius: 40px;
+  background: #2a8c77;
+  color: #fff;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 1em;
+  font-weight: 600;
 }
 
 button.login:hover {
-    background-color: #b48e5d; /* Color de fondo cuando el cursor está sobre el botón */
+  background: #1a5c50;
 }
-.register{
-    font-size: .9em;
-    color: #fff;
-    text-align: center;
-    margin: 25px 0 10px;
+
+button.cancel {
+  width: 100%;
+  height: 40px;
+  border-radius: 40px;
+  background: #9d2348;
+  color: #fff;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 1em;
+  font-weight: 600;
 }
-.register p a{
-    text-decoration: none;
-    color: #fff;
-    font-weight: 600;
+
+button.cancel:hover {
+  background-color: #611230;
 }
-.register p a:hover{
-    text-decoration: underline;
+
+.register {
+  font-size: 0.9em;
+  color: #fff;
+  text-align: center;
+  margin: 25px 0 10px;
+}
+.register p a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: 600;
+}
+.register p a:hover {
+  text-decoration: underline;
 }
 
 .returnError {
-    padding-top: 20px;
-    text-align: center;
-    font-weight: bold;
-    animation: bounce 2s;
-    color: #ba1934;
+  padding-top: 20px;
+  text-align: center;
+  font-weight: bold;
+  animation: bounce 2s;
+  color: #ba1934;
 }
 
 .returnSuccesful {
-    padding-top: 20px;
-    text-align: center;
-    font-weight: bold;
-    color: #1a5c50;
+  padding-top: 20px;
+  text-align: center;
+  font-weight: bold;
+  color: #1a5c50;
+}
+
+.options {
+  text-align: center;
+  margin-top: 50px;
 }
