Admin: Gestión de Actas

--- a/css/petView.css
+++ b/css/petView.css
@@ -108,17 +108,23 @@ th {
     color: #9d2348;
 }
 
-tr:nth-child(even) {
+tr.enabled:nth-child(even) {
     background-color: #FFF2EE;
 }
 
-tr {
+tr.enabled {
     background-color: #ffe3d0;
     color: #1a5c50;
 }
 
 .lbl-info {
     display: none;
+}
+
+tr.disabled {
+    background-color: #771631;
+    color: #f0e5d4;
+    font-style: italic;
 }
 
 
