--- a/css/petView.css
+++ b/css/petView.css
@@ -65,10 +65,9 @@
     position: absolute;
     right: 8px;
     color: #611230;
-    font-size: 1.2em;
-    top: 20px;
+    font-size: 1.5em;
+    top: 65px;
 }
-
 
 /*Tabla*/
 .tablaActas {
@@ -188,6 +187,32 @@ tr.disabled {
     .lbl-info {
         display: inline;
         font-weight: bold;
+    }
+
+    .searchbox{
+        position: relative;
+        border-bottom: 2px solid #d3bf9a;
+        padding-top: 4em;
+    }
+    
+    .searchbox input {
+        width: 100%;
+        height: 50px;
+        background: transparent;
+        border: none;
+        outline: none;
+        font-size: 1.1em;
+        color: #8b8f91;
+        font-family: 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        
+    }
+
+    .searchbox ion-icon{
+        position: absolute;
+        right: 10px;
+        color: #611230;
+        font-size: 1.5em;
+        top: 130px;
     }
 
 }
